--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -94,6 +94,8 @@
     %  * Если цитировать каждый источник отдельной командой --- найти некоторые ошибки будет проще.
     %
     %% authorvak
+    \nocite{Khilkevitch2020}
+    \nocite{Reux2022}
     \nocite{vakbib1}%
     \nocite{vakbib2}%
     %
