--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -295,7 +295,7 @@
   addendum = {(Scopus, WoS)},
 }
 
-@ARTICLE{Khilkevitch2013,
+@article{Khilkevitch2013,
   author = {Хилькевич, Е. М. and Шевелев, А. Е. and Чугунов, И. Н. and Найденов, В. О. and Гин, Д. Б. and Дойников, Д. Н. },
   addendum = {(ВАК, WoS, Scopus)},
   title = {Применение методов деконволюции к спектрам гамма-излучения термоядерной плазмы},
@@ -326,6 +326,22 @@
   authorwos = {true},
   addendum = {(Scopus, WoS)},
 }
+
+@article{Iliasova2020,
+  title = {Calibration of neutron spectrometers based on a BC-501A liquid scintillator using the neutron–gamma coincidence method},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {983},
+  pages = {164590},
+  year = {2020},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/j.nima.2020.164590},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168900220309876},
+  author = {M.V. Iliasova and A.E. Shevelev and E.M. Khilkevitch and I.N. Chugunov and V.B. Minaev and D.B. Gin and D.N. Doinikov and I.A. Polunovsky and V.O. Naidenov and M.A. Kozlovskiy and M.F. Kudoyarov},
+  keywords = {Neutron spectrometry, Liquid scintillator, Response functions, Efficiency of neutron registration, Monoenergetic neutrons, Neutron spectrometer calibration, Coincidence method},
+}
+
+
+
 %
 %@inproceedings{confbib1,
 %  author = {Фамилия, И. О.},
