--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -489,6 +489,219 @@
   author = {Thomas W. Burrows},
 }
 
+@article{MartinSolis1998,
+  author = {Martı́n-Solı́s, J. R.  and Alvarez, J. D.  and Sánchez,R.  and Esposito,B. },
+  title = {Momentum–space structure of relativistic runaway electrons},
+  journal = {Physics of Plasmas},
+  volume = {5},
+  number = {6},
+  pages = {2370-2377},
+  year = {1998},
+  doi = {10.1063/1.872911},
+  URL = {https://doi.org/10.1063/1.872911},
+  eprint = {https://doi.org/10.1063/1.872911}
+}
+
+@Thesis{Shevelev2019th, 
+  author = {Шевелев, А. Е.}, 
+  title = { Развитие методов гамма-спектроскопии для диагностики убегающих электронов в компактных токамаках},
+  media = {text}, 
+  type = {docthesis}, 
+  major = {физ-мат. наук}, 
+  majorcode = {01.04.08}, 
+  location = {Санкт-Петербург}, 
+  date = {2019}, 
+  pagetotal = {158}, 
+  language = {russian} 
+} 
+
+@article{MartinSolis1999,
+  author = {Martín-Solís,J. R.  and Esposito,B.  and Sánchez,R.  and Alvarez,J. D. },
+  title = {Energy limits on runaway electrons in tokamak plasmas},
+  journal = {Physics of Plasmas},
+  volume = {6},
+  number = {1},
+  pages = {238-252},
+  year = {1999},
+  doi = {10.1063/1.873276},
+  URL = {https://doi.org/10.1063/1.873276},
+  eprint = {https://doi.org/10.1063/1.873276}
+}
+
+@article{Bakhtiari2005,
+  author = {Bakhtiari,M.  and Kramer,G. J.  and Whyte,D. G. },
+  title = {Momentum-space study of the effect of bremsstrahlung radiation on the energy of runaway electrons in tokamaks},
+  journal = {Physics of Plasmas},
+  volume = {12},
+  number = {10},
+  pages = {102503},
+  year = {2005},
+  doi = {10.1063/1.2065368},
+  URL = { https://doi.org/10.1063/1.2065368},
+  eprint = { https://doi.org/10.1063/1.2065368}
+}
+
+@article{Carbajal2017,
+  author = {Carbajal,L.  and del-Castillo-Negrete,D.  and Spong,D.  and Seal,S.  and Baylor,L. },
+  title = {Space dependent, full orbit effects on runaway electron dynamics in tokamak           plasmas},
+  journal = {Physics of Plasmas},
+  volume = {24},
+  number = {4},
+  pages = {042512},
+  year = {2017},
+  doi = {10.1063/1.4981209},
+  URL = { https://doi.org/10.1063/1.4981209},
+  eprint = { https://doi.org/10.1063/1.4981209}
+}
+
+@book{Abdullaev2016,
+  title={Theoretical and experimental studies of runaway electrons in the TEXTOR tokamak},
+  author={Abdullaev,S.S. and Finken, K.H.  and Wongrach, K. and Willi, O. },
+  isbn={978-3-95806-140-8},
+  series={Institute of Energy and Climate Research, Plasma Physics IEK-4, Energy and Environment, Volume 318},
+  url={https://books.google.ru/books?id=iPlAwZI6HIYC},
+  year={2016},
+  publisher={Forschungszentrum Jülich GmbH}
+}
+
+
+@article{Laurent1990,
+  doi = {10.1209/0295-5075/11/3/006},
+  url = {https://doi.org/10.1209/0295-5075/11/3/006},
+  year = 1990,
+  month = {2},
+  publisher = {{IOP} Publishing},
+  volume = {11},
+  number = {3},
+  pages = {219--224},
+  author = {L Laurent and J. M Rax},
+  title = {Stochastic Instability of Runaway Electrons in Tokamaks},
+  journal = {Europhysics Letters ({EPL})},
+}
+
+@article{Parail1978,
+  doi = {10.1088/0029-5515/18/3/001},
+  url = {https://doi.org/10.1088/0029-5515/18/3/001},
+  year = 1978,
+  month = {3},
+  publisher = {{IOP} Publishing},
+  volume = {18},
+  number = {3},
+  pages = {303--314},
+  author = {V.V. Parail and O.P. Pogutse},
+  title = {The kinetic theory of runaway electron beam instability in a tokamak},
+  journal = {Nuclear Fusion},
+}
+
+@incollection{Leontovich1982,
+  author       = {Параил, В. В. and Погуце, О. П. },
+  title        = {Ускоренные электроны в токамаке},
+  booktitle    = {Вопросы теории плазмы},
+  publisher    = {Энергоиздат},
+  year         = {1982},
+  editor       = {Леонтович М. А. and Кадомцев Б. Б.},
+  volume       = {11},
+  pages        = {5-55},
+  address      = {Москва},
+  language     = {russian}
+}
+
+@article{Gin2008,
+  author = {Gin, Dmitry and Chugunov, I. and Shevelev, Alexander},
+  year = {2008},
+  month = {03},
+  pages = {240-245},
+  title = {Development of a technique for high-speed γ-ray spectrometry},
+  volume = {51},
+  journal = {Instruments and Experimental Techniques - INSTRUM EXP TECH-ENGL TR},
+  doi = {10.1134/S0020441208020152}
+}
+
+@article{Renker2009,
+  doi = {10.1088/1748-0221/4/04/p04004},
+  url = {https://doi.org/10.1088/1748-0221/4/04/p04004},
+  year = 2009,
+  month = {4},
+  publisher = {{IOP} Publishing},
+  volume = {4},
+  number = {04},
+  pages = {P04004--P04004},
+  author = {D Renker and E Lorenz},
+  title = {Advances in solid state photon detectors},
+  journal = {Journal of Instrumentation},
+}
+
+@inproceedings{Grodzicka2015,
+  author={Grodzicka, M. and Szczęśniak, T. and Moszyński, M. and Swiderski, L. and Szawłowski, M.},
+  booktitle={2015 IEEE Nuclear Science Symposium and Medical Imaging Conference (NSS/MIC)}, 
+  title={Silicon photomultipliers in scintillation detectors used for gamma-ray energies up to 6.1 MeV}, 
+  year={2015},
+  volume={},
+  number={},
+  pages={1-3},
+  doi={10.1109/NSSMIC.2015.7581742}
+}
+
+@article{Shevelev2004,
+  author = {Шевелев, А. Е. and Чугунов, И. Н.  and Гусев, В. К.  and Петров, Ю. В.  and Рождественский, В. В.  and Минеев, А. Б. and Сахаров, Н. В.  and Дойников, Д. Н.  and Изотов, А. Л.  and Крикунов, С. В.  and  Найденов, В. О.  and Подушникова, К. А.  and Полуновский, И. А.  and Гин, Д. Б.  and Чугунов, А. И.  },
+  title = {Исследование убегающих электронов на токамаке Глобус-М},
+  journal = {Физика плазмы},
+  year = {2004},
+  volume = {30},
+  number = {2},
+  pages = {180-184},
+  language = {russian}
+}
+
+@book{Scherer2017,
+  title={Computational Physics: Simulation of Classical and Quantum Systems},
+  author={Scherer, P.O.J.},
+  isbn={9783319610887},
+  series={Graduate Texts in Physics},
+  url={https://books.google.ru/books?id=8cA0DwAAQBAJ},
+  year={2017},
+  publisher={Springer International Publishing}
+}
+
+
+@article{Morhac2011,
+  title = {High-resolution boosted deconvolution of spectroscopic data},
+  journal = {Journal of Computational and Applied Mathematics},
+  volume = {235},
+  number = {6},
+  pages = {1629-1640},
+  year = {2011},
+  issn = {0377-0427},
+  doi = {https://doi.org/10.1016/j.cam.2010.09.005},
+  url = {https://www.sciencedirect.com/science/article/pii/S0377042710004966},
+  author = {Miroslav Morháč and Vladislav Matoušek},
+  keywords = {Positive definite deconvolution algorithms, Boosted deconvolution, Decomposition to -functions, Resolution improvement, Decomposition of clusters of peaks, Multidimensional -ray spectra}
+}
+
+@techreport{Gold1964,
+  title = {An iterative unfolding method for response matrices },
+  author = { Gold, R. },
+  year  = {1964},
+  month = {12},
+  publisher = {Argonne National Laboratory},
+  address = {  Illinois },
+  volume = {ANL-6984},
+  doi = {https://doi.org/10.2172/4634295 }
+}
+  
+@article{Lemberg1987,
+	author = {И. Х. Лемберг and В. О. Найденов and В. Я. Френкель},
+	title = {Циклотрон Физико-технического института им. А. Ф. Иоффе АН СССР (К 40-летию со дня пуска)},
+	publisher = {Успехи физических наук},
+	year = {1987},
+	journal = {Усп. физ. наук},
+	volume = {153},
+	number = {11},
+	pages = {497-519},
+	url = {https://ufn.ru/ru/articles/1987/11/e/},
+	doi = {10.3367/UFNr.0153.198711e.0497}
+}
+
 %@ARTICLE{Article,
 %  author   = {Peter Adams},
 %  title    = {The title of the work},
